--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helioslauncher",
-  "version": "1.0.2",
-  "productName": "Helios Launcher",
+  "version": "1.0.3",
+  "productName": "FalconCraft Launcher",
   "description": "",
   "author": "kill032",
   "license": "UNLICENSED",
